@@ -1,3 +1,8 @@
+2007-11-19  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/wizard/save.py:
+	Update getitem callsites here too.
+
 2007-11-19  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/admin/text/view.py: Remove unused import. Stupid
